[project]
name = "mcp_polygon"
version = "0.4.1"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.15.0",
 "polygon-api-client>=1.15.4",
]
[[project.authors]]
name = "Polygon"
email = "support@polygon.io"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pytest>=8.4.0",
]

[project.scripts]
mcp_polygon = "mcp_polygon:run"
